fixed cropped card on mobile screens

--- a/src/components/StylesCard/StylesCard.styles.scss
+++ b/src/components/StylesCard/StylesCard.styles.scss
@@ -1,4 +1,7 @@
 .styles-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
   width: 100%;
   height: 350px;
 
@@ -21,7 +24,6 @@
 
   &-body {
     width: 100%;
-    height: 12%;
 
     &-title {
       margin: 0;
